crates/cribo/tests/snapshots/requirements@bundle_third_party_importlib_module_anchor.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_module_anchor/main.py
---
packages:
  - anchor-pkg
count: 1
