crates/cribo/tests/snapshots/requirements@bundle_third_party_importlib_static_parent_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_static_parent_init/main.py
---
packages: []
count: 0
