crates/cribo/tests/snapshots/requirements@bundle_third_party_local_non_package_parent.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_local_non_package_parent/main.py
---
packages: []
count: 0
