crates/cribo/tests/snapshots/requirements@bundle_third_party_module_map_extras.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_module_map_extras/main.py
---
packages:
  - speed-dep
count: 1
